[package]
name = "local-news-videos"
version = "0.1.0"
edition = "2021"
authors = ["azechi"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
worker = { version="0.3" }
worker-macros = { version="0.2" }
console_error_panic_hook = { version = "0.1" }
serde = { version="1", features = ["derive"]}
futures = "0.3.30"

chrono = { version = "0.4", default-features = false, features = [
    "wasmbind", "serde", "now"
] }
